side bar structure updated

--- a/categories.html
+++ b/categories.html
@@ -43,54 +43,19 @@
     <section>
         <div class="container unpadding">
             <div class="row filter">
-                <div class="col-lg-3">
+                <div class="col-lg-3 sidebar">
                     <h2>Categories</h2>
                     <h3>MEN</h3>
                     <ul>
                         <li><a href="#"><span class="subcategory">New products</span><span class="quantity">104</span></a></li>
                         <li><a href="#"><span class="subcategory">Gymwear</span><span class="quantity">68</span></a></li>
                     </ul>
-                    <div class="row">
-                        <div class="col-lg-8">
-                            <p>New products</p>
-                        </div>
-                        <div class="col-log-4">
-                            <p>104</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-8">
-                            <p>Gymwear</p>
-                        </div>
-                        <div class="col-log-4">
-                            <p>68</p>
-                        </div>
-                    </div>
                     <h3>WOMEN</h3>
-                    <div class="row">
-                        <div class="col-lg-8">
-                            <p>Jackets</p>
-                        </div>
-                        <div class="col-log-4">
-                            <p>75</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-8">
-                            <p>Shirts</p>
-                        </div>
-                        <div class="col-log-4">
-                            <p>150</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-8">
-                            <p>Accesories</p>
-                        </div>
-                        <div class="col-log-4">
-
-                        </div>
-                    </div>
+                    <ul>
+                        <li><a href="#"><span class="subcategory">Jackets</span><span class="quantity">75</span></a></li>
+                        <li><a href="#"><span class="subcategory">Shirts</span><span class="quantity">150</span></a></li>
+                        <li><a href="#"><span class="subcategory">Accesories</span><span class="quantity">95</span></a></li>
+                    </ul>
                     <h3>FOOTWEAR</h3>
                     <h3>ACCESORIES</h3>
                     <h2>Filter By</h2>
@@ -114,46 +79,13 @@
                         <div class="round-btn-filter purple"><i class="ion-checkmark"></i></div>
                     </div>
                     <h3>BRANDS</h3>
-                    <div class="row">
-                        <div class="col-lg-8">
-                            <p>The North Face</p>
-                        </div>
-                        <div class="col-log-4">
-                            <p>24</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-8">
-                            <p>Zara Basic</p>
-                        </div>
-                        <div class="col-log-4">
-                            <p>68</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-8">
-                            <p>Maschino</p>
-                        </div>
-                        <div class="col-log-4">
-                            <p>35</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-8">
-                            <p>Supreme</p>
-                        </div>
-                        <div class="col-log-4">
-                            <p>15</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-8">
-                            <p>Ecko Unitd</p>
-                        </div>
-                        <div class="col-log-4">
-                            <p>68</p>
-                        </div>
-                    </div>
+                    <ul>
+                        <li><span class="category">The North Face</span><span class="quantity">24</span></li>
+                        <li><span class="category">Zara Basic</span><span class="quantity">68</span></li>
+                        <li><span class="category">Maschino</span><span class="quantity">35</span></li>
+                        <li><span class="category">Supreme</span><span class="quantity">15</span></li>
+                        <li><span class="category">Ecko Unitd</span><span class="quantity">68</span></li>
+                    </ul>
                     <h2>Recent Product</h2>
                     <div class="flex-horizontal">
                         <img src="https://dummyimage.com/77x101/eaeaea/4d4d4d" alt="dummy">
@@ -162,7 +94,7 @@
                             <p>$32.00</p>
                         </div>
                     </div>
-                    <div class="flex-horizontal">
+                    <div class="flex-horizontal margin-top-20">
                         <img src="https://dummyimage.com/77x101/eaeaea/4d4d4d" alt="dummy">
                         <div class="flex-vertical">
                             <p>Nike Drawstring</p>
