extra small columns updated

--- a/index.html
+++ b/index.html
@@ -48,46 +48,44 @@
         <section id="about">
             <div class="container unpadding">
                 <div class="row">
-                    <div class="col-lg-1">
+                    <div class="col-lg-1 col-xs-2">
                         <div class="black-dash"></div>
                     </div>
-                    <div class="col-lg-8">
+                    <div class="col-lg-8 col-xs-9">
                         <h1>About <span>Mr.Bara</span></h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam quos perspiciatis error quam provident commodi recusandae expedita, mollitia earum est voluptatum ex cum inventore. Laudantium sunt, quo dolor ratione velit?>Distinctio quasi tempore corporis numquam, ducimus veniam dolore quidem ab </p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam aperiam dolores culpa tempora beatae, ad eum. Quo consectetur impedit dolores sed voluptatum libero, maxime, saepe pariatur quia, eaque voluptatem magni?</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-offset-1 col-lg-10" style="padding: 0;">
-                        <img src="assets/img/skateboard.jpg" alt="skateboard">
+                    <div class="col-lg-offset-1 col-lg-10 col-xs-12" style="padding: 0;">
+                        <img class="img-responsive" src="assets/img/skateboard.jpg" alt="skateboard">
                     </div>
-                    <div class="col-lg-1">&nbsp;</div>
                 </div>
             </div>
         </section>
-        <div class="clearfix"></div>
         <section class="red-background">
             <div class="container unpadding">
                 <div class="row">
-                    <div class="col-lg-1">
+                    <div class="col-lg-1 col-xs-2">
                         <div class="white-dash"></div>
                     </div>
-                    <div class="col-lg-8">
+                    <div class="col-lg-8 col-xs-9">
                         <h2>Why Choose Mr. Bara</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam dolor error dignissimos provident ipsam sit exercitationem.</p>
                     </div>
                 </div>
                 <div id="reasons-row" class="row">
-                    <div class="col-lg-offset-1 col-lg-3">
+                    <div class="col-lg-offset-1 col-lg-3 col-xs-offset-2 col-xs-8">
                         <div class="red-dash"></div>
                         <h3>Free<br>Shipping</h3>
                         <p>Lorem Ipsum is simply dummy text of the printing and pesetting industry</p>
                     </div>
-                    <div class="col-lg-offset-1 col-lg-3">
+                    <div class="col-lg-offset-1 col-lg-3 col-xs-offset-2 col-xs-8">
                         <div class="red-dash"></div>
                         <h3>100% Money<br>Back</h3>
                         <p>Lorem Ipsum is simply dummy text of the printing and pesetting industry</p>
                     </div>
-                    <div class="col-lg-offset-1 col-lg-3">
+                    <div class="col-lg-offset-1 col-lg-3 col-xs-offset-2 col-xs-8">
                         <div class="red-dash"></div>
                         <h3>Dedicated<br>Support</h3>
                         <p>Lorem Ipsum is simply dummy text of the printing and pesetting industry</p>
@@ -98,10 +96,10 @@
         <section>
             <div class="container unpadding">
                 <div id="popular-products-row" class="row">
-                    <div class="col-lg-1">
+                    <div class="col-lg-1 col-xs-2">
                         <div class="black-dash"></div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-xs-10">
                         <h2>Popular <span>Products</span></h2>
                     </div>
                     <div class="col-lg-offset-5 col-lg-2">
