remove unnecessary wrapping div

--- a/categories.html
+++ b/categories.html
@@ -39,7 +39,6 @@
             </ul>
         </div>
     </nav>
-
     <section>
         <div class="container unpadding">
             <div class="row filter">
@@ -90,8 +89,6 @@
                     <div class="flex-horizontal">
                         <img src="https://dummyimage.com/77x101/eaeaea/4d4d4d" alt="dummy">
                         <div class="flex-vertical">
-                            <p>Barbour T-shirt International</p>
-                            <p>$32.00</p>
                         </div>
                     </div>
                     <div class="flex-horizontal margin-top-20">
@@ -125,85 +122,69 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-4">
-                            <div>
-                                <img src="https://dummyimage.com/270x360/eaeaea/4d4d4d" alt="dummy" alt="Longline Hooded T-shirt">
-                                <div class="center-text">
-                                    <p>Mr.Bara Longline Hooded T-shirt</p>
-                                    <p>$19.00</p>
-                                </div>
+                        <div class="col-lg-4 img-text-group">
+                            <div class="sale-tag">Sale</div>
+                            <div class="new-tag">New</div>
+                            <img src="https://dummyimage.com/270x360/eaeaea/4d4d4d" alt="dummy" alt="Longline Hooded T-shirt">
+                            <div class="center-text">
+                                <p>Mr.Bara Longline Hooded T-shirt</p>
+                                <p>$19.00</p>
                             </div>
                         </div>
                         <div class="col-lg-4">
-                            <div>
-                                <img src="https://dummyimage.com/270x360/eaeaea/4d4d4d" alt="dummy" alt="Longline Hooded T-shirt">
-                                <div class="center-text">
-                                    <p>Mr.Bara Longline Hooded T-shirt</p>
-                                    <p>$19.00</p>
-                                </div>
+                            <img src="https://dummyimage.com/270x360/eaeaea/4d4d4d" alt="dummy" alt="Longline Hooded T-shirt">
+                            <div class="center-text">
+                                <p>Mr.Bara Longline Hooded T-shirt</p>
+                                <p>$19.00</p>
                             </div>
                         </div>
                         <div class="col-lg-4">
-                            <div>
-                                <img src="https://dummyimage.com/270x360/eaeaea/4d4d4d" alt="dummy" alt="Longline Hooded T-shirt">
-                                <div class="center-text">
-                                    <p>Mr.Bara Longline Hooded T-shirt</p>
-                                    <p>$19.00</p>
-                                </div>
+                            <img src="https://dummyimage.com/270x360/eaeaea/4d4d4d" alt="dummy" alt="Longline Hooded T-shirt">
+                            <div class="center-text">
+                                <p>Mr.Bara Longline Hooded T-shirt</p>
+                                <p>$19.00</p>
                             </div>
                         </div>
                         <div class="col-lg-4">
-                            <div>
-                                <img src="https://dummyimage.com/270x360/eaeaea/4d4d4d" alt="dummy" alt="Longline Hooded T-shirt">
-                                <div class="center-text">
-                                    <p>Mr.Bara Longline Hooded T-shirt</p>
-                                    <p>$19.00</p>
-                                </div>
+                            <img src="https://dummyimage.com/270x360/eaeaea/4d4d4d" alt="dummy" alt="Longline Hooded T-shirt">
+                            <div class="center-text">
+                                <p>Mr.Bara Longline Hooded T-shirt</p>
+                                <p>$19.00</p>
                             </div>
                         </div>
                         <div class="col-lg-4">
-                            <div>
-                                <img src="https://dummyimage.com/270x360/eaeaea/4d4d4d" alt="dummy" alt="Longline Hooded T-shirt">
-                                <div class="center-text">
-                                    <p>Mr.Bara Longline Hooded T-shirt</p>
-                                    <p>$19.00</p>
-                                </div>
+                            <img src="https://dummyimage.com/270x360/eaeaea/4d4d4d" alt="dummy" alt="Longline Hooded T-shirt">
+                            <div class="center-text">
+                                <p>Mr.Bara Longline Hooded T-shirt</p>
+                                <p>$19.00</p>
                             </div>
                         </div>
                         <div class="col-lg-4">
-                            <div>
-                                <img src="https://dummyimage.com/270x360/eaeaea/4d4d4d" alt="dummy" alt="Longline Hooded T-shirt">
-                                <div class="center-text">
-                                    <p>Mr.Bara Longline Hooded T-shirt</p>
-                                    <p>$19.00</p>
-                                </div>
+                            <img src="https://dummyimage.com/270x360/eaeaea/4d4d4d" alt="dummy" alt="Longline Hooded T-shirt">
+                            <div class="center-text">
+                                <p>Mr.Bara Longline Hooded T-shirt</p>
+                                <p>$19.00</p>
                             </div>
                         </div>
                         <div class="col-lg-4">
-                            <div>
-                                <img src="https://dummyimage.com/270x360/eaeaea/4d4d4d" alt="dummy" alt="Longline Hooded T-shirt">
-                                <div class="center-text">
-                                    <p>Mr.Bara Longline Hooded T-shirt</p>
-                                    <p>$19.00</p>
-                                </div>
+                            <img src="https://dummyimage.com/270x360/eaeaea/4d4d4d" alt="dummy" alt="Longline Hooded T-shirt">
+                            <div class="center-text">
+                                <p>Mr.Bara Longline Hooded T-shirt</p>
+                                <p>$19.00</p>
                             </div>
                         </div>
                         <div class="col-lg-4">
-                            <div>
-                                <img src="https://dummyimage.com/270x360/eaeaea/4d4d4d" alt="dummy" alt="Longline Hooded T-shirt">
-                                <div class="center-text">
-                                    <p>Mr.Bara Longline Hooded T-shirt</p>
-                                    <p>$19.00</p>
-                                </div>
+                            <img src="https://dummyimage.com/270x360/eaeaea/4d4d4d" alt="dummy" alt="Longline Hooded T-shirt">
+                            <div class="center-text">
+                                <p>Mr.Bara Longline Hooded T-shirt</p>
+                                <p>$19.00</p>
                             </div>
                         </div>
                         <div class="col-lg-4">
-                            <div>
-                                <img src="https://dummyimage.com/270x360/eaeaea/4d4d4d" alt="dummy" alt="Longline Hooded T-shirt">
-                                <div class="center-text">
-                                    <p>Mr.Bara Longline Hooded T-shirt</p>
-                                    <p>$19.00</p>
-                                </div>
+                            <img src="https://dummyimage.com/270x360/eaeaea/4d4d4d" alt="dummy" alt="Longline Hooded T-shirt">
+                            <div class="center-text">
+                                <p>Mr.Bara Longline Hooded T-shirt</p>
+                                <p>$19.00</p>
                             </div>
                         </div>
                     </div>
